# husky_agv

./: .gitignore  README.md  gps_points.txt  teb_params_no_mans_land.sh  teb_params_vision.sh  teb_params_vision_middle.sh
src/localisation/: CMakeLists.txt
src/localisation/launch/: dual_ekf_navsat_husky.launch
src/localisation/params/: dual_ekf_navsat_example.yaml
src/localisation/src/: clock.cpp  imu.cpp  odom_c.cpp  odom_imu.cpp
src/outdoor_waypoint_nav/: CMakeLists.txt
src/outdoor_waypoint_nav/include/: switchgps.hpp  switchgps_old.hpp
src/outdoor_waypoint_nav/launch/include/: heading_calibration.launch
src/outdoor_waypoint_nav/params/: navsat_params.yaml
src/outdoor_waypoint_nav/src/: qualification.cpp  switchgps.cpp  switchgps_old.cpp
src/outdoor_waypoint_nav/waypoint_files/: points_outdoor.txt  points_outdoor_1.txt
src/planning/huskey_move/src/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  (+1 more)
src/planning/husky_move/src/: move.launch
src/setup/: CMakeLists.txt  husky.rviz  package.xml
src/setup/launch/: setup.launch
src/tf/: CMakeLists.txt  package.xml
src/tf/launch/: tf.launch
src/vision/: CMakeLists.txt  package.xml
src/vision/cfg/: Tutorials.cfg
src/vision/include/: find_pothole.hpp  hough.hpp  lane_laser_scan.hpp  lane_segmentation.hpp  lidar_new.hpp  lidar_plot.hpp  matrixTransformation.hpp  obstacle_det_vision_lidar.hpp  params.hpp  rampdetector.hpp  ransac_new_2.hpp  ransac_second.hpp  waypoint_generator_new2.hpp  white_obstacle.hpp
src/vision/src/: master.cpp
(+4 files in other folders)
